--- a/Bauwagen/Bauwagen.csproj
+++ b/Bauwagen/Bauwagen.csproj
@@ -91,6 +91,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Frm_AboutBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_AboutBox.Designer.cs">
+      <DependentUpon>Frm_AboutBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Cls_Procedure.cs" />
     <Compile Include="Cls_Query.cs" />
     <Compile Include="Frm_Aufladen.cs">
@@ -137,6 +143,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Frm_AboutBox.resx">
+      <DependentUpon>Frm_AboutBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm_Aufladen.resx">
       <DependentUpon>Frm_Aufladen.cs</DependentUpon>
     </EmbeddedResource>
