--- a/Bauwagen/Properties/Settings.settings
+++ b/Bauwagen/Properties/Settings.settings
@@ -5,5 +5,17 @@
     <Setting Name="Key" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">45547</Value>
     </Setting>
+    <Setting Name="Relais1" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Relais2" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Relais3" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Relais4" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
