--- a/Bauwagen/Properties/Settings.settings
+++ b/Bauwagen/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="Relais4" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="ComRelais" Type="System.String" Scope="User">
+      <Value Profile="(Default)">COM1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
