--- a/Bauwagen/Properties/Settings.settings
+++ b/Bauwagen/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="ComRelais" Type="System.String" Scope="User">
       <Value Profile="(Default)">COM1</Value>
     </Setting>
+    <Setting Name="ComRelaisCocktail" Type="System.String" Scope="User">
+      <Value Profile="(Default)">COM2</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
